test/files/neg/t8417.scala


trait T {
  def f(x: Any)(y: Any) = "" + x + y
  def g = f("hello", "world")("holy", "moly")
}
